--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="_wrapper">
         <div class="taskbar-left">
             <div class="_container taskbar-left-container">
-                <div class="taskbar-left-wrapper">
+                <!-- <div class="taskbar-left-wrapper"> -->
                     <img src="./img/taskbar-left/Logo.svg" alt="logo" class="logo">
                     <nav class="menu">
                         <ul class="menu-list">
@@ -47,7 +47,7 @@
                             <a href="#" class="question-btn">Go To Help Center</a>
                         </div>
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
         <main class="main">
