Header + raning-app
Сделан header и виджет raning app

--- a/index.html
+++ b/index.html
@@ -51,7 +51,40 @@
             </div>
         </div>
         <main class="main">
+            <header class="header">
+                <div class="_container header_container">
+                    <div class="header_wrapper">
+                        <div class="greeting">
+                            <h1 class="user_name">Hi, Skylar Dias</h1>
+                            <p class="_header_subtitle">Let's finish your task today!</p>
+                        </div>
+                        <div class="header-icon">
+                            <img src="./img/main/header/massange.svg" alt="">
+                            <img src="./img/main/header/user.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <section class="statistic">
+                <div class="_container statistic-container">
+                    <div class="statistic-wrapper">
+                        <div class="running-app">
+                            <h2 class="running-title">Running Task</h2>
+                            <span class="counter">65</span>
+                            <div class="running-info">
+                                <img src="./img/main/statistic/running-app-countres.svg" alt="">
+                                <div>
+                                    <span class="task">100</span>
+                                    <span class="running-info-title">Task</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="activity-app">
 
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <div class="taskbar-right">
 
