Activity app + Mentors
Были разработаны desktop версии виджета activity и секции mentors

--- a/index.html
+++ b/index.html
@@ -80,8 +80,79 @@
                             </div>
                         </div>
                         <div class="activity-app">
-
+                            <div class="activity-header">
+                                <h2 class="activity-title">Activity</h2>
+                                <div class="activity-select">
+                                    <div class="select-header">This Week</div>
+                                    <div class="dropdown _hidden">
+                                        <ul class="dropdown-list">
+                                            <li class="dropdown-iteam">This Month</li>
+                                            <li class="dropdown-iteam">This Year</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <img src="./img/main/statistic/activity.png" alt="statistic-activity">
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="mentor">
+                <div class="_container menthor-container">
+                    <div class="section-header menthor-header">
+                        <h2 class="section-title menthor-title">Monthly Mentors</h2>
+                        <div class="slider-buttons">
+                            <img src="./img/main/menthor/02.svg" alt="" class="slider-btn">
+                            <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
+                        </div>
+                    </div>
+                    <div class="menthor-body">
+                        <ul class="menthor-list">
+                            <li class="menthor-card">
+                                <div class="menthor-info">
+                                    <div>
+                                        <img src="./img/main/menthor/mentor-photo01.png" alt="mentor-phohto" class="menthor-photo">
+                                        <div class="menthor-prof">
+                                            <h3 class="menthor-name">Curious George</h3>
+                                            <h4 class="menthor-profession">UI UX Design</h4>
+                                        </div>
+                                    </div>
+                                    <button class="mentor-like menhor-unfollow">+ Follow</button>
+                                </div>
+                                <div class="menthor-progress">
+                                    <div class="menthor-task">
+                                        <img src="./img/main/menthor/01.svg" alt="task">
+                                        <span class="mentor-progress-descr">40 Task</span>
+                                    </div>
+                                    <div class="star-raiting">
+                                        <img src="./img/main/menthor/star.svg" alt="star">
+                                        <span class="mentor-progress-descr">4,7  (750 Reviews)</span>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="menthor-card">
+                                <div class="menthor-info">
+                                    <div>
+                                        <img src="./img/main/menthor/mentor-photo02.png" alt="mentor-phohto" class="menthor-photo">
+                                        <div class="menthor-prof">
+                                            <h3 class="menthor-name">Abraham Lincoln</h3>
+                                            <h4 class="menthor-profession">3D Design</h4>
+                                        </div>
+                                    </div>
+                                    <button class="mentor-like menhor-follow">Followed</button>
+                                </div>
+                                <div class="menthor-progress">
+                                    <div class="menthor-task">
+                                        <img src="./img/main/menthor/01.svg" alt="task">
+                                        <span class="mentor-progress-descr">32 Task</span>
+                                    </div>
+                                    <div class="star-raiting">
+                                        <img src="./img/main/menthor/star.svg" alt="star">
+                                        <span class="mentor-progress-descr">4,9  (510 Reviews)</span>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
@@ -90,5 +161,6 @@
 
         </div>
     </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
