--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                     <div>
                                         <img src="./img/main/menthor/mentor-photo01.png" alt="mentor-phohto" class="menthor-photo">
                                         <div class="menthor-prof">
-                                            <h3 class="menthor-name">Curious George</h3>
-                                            <h4 class="menthor-profession">UI UX Design</h4>
+                                            <h3 class="card-name">Curious George</h3>
+                                            <h4 class="card-profession">UI UX Design</h4>
                                         </div>
                                     </div>
                                     <button class="mentor-like menhor-unfollow">+ Follow</button>
@@ -136,7 +136,7 @@
                                         <img src="./img/main/menthor/mentor-photo02.png" alt="mentor-phohto" class="menthor-photo">
                                         <div class="menthor-prof">
                                             <h3 class="menthor-name">Abraham Lincoln</h3>
-                                            <h4 class="menthor-profession">3D Design</h4>
+                                            <h4 class="card-profession">3D Design</h4>
                                         </div>
                                     </div>
                                     <button class="mentor-like menhor-follow">Followed</button>
@@ -156,11 +156,76 @@
                     </div>
                 </div>
             </section>
+            <section class="task">
+                <div class="_container task-container">
+                    <div class="section-header task-header">
+                        <h2 class="section-title task-title">Upcoming Task</h2>
+                        <div class="slider-buttons">
+                            <img src="./img/main/menthor/02.svg" alt="" class="slider-btn">
+                            <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
+                        </div>
+                    </div>
+                    <ul class="task-list">
+                        <li class="task-card">
+                            <img src="./img/main/task/task-img01.png" alt="">
+                            <h3 class="card-name">Creating Mobile App Design</h3>
+                            <h4 class="card-profession">UI UX Design</h4>
+                            <div class="task-progress">
+                                <div class="progress-header">
+                                    <h3 class="progress-title">Progress</h3>
+                                    <spam class="progress-counter">75%</spam>
+                                </div>
+                                <img src="./img/main/task/progress01.svg" alt="" class="progress-img">
+                                <div class="task-time">
+                                    <div>
+                                        <img src="./img/main/task/clock.png" alt="">
+                                        <h5>3 Days Left</h5>
+                                    </div>
+                                    <img src="./img/main/task/student.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="task-card">
+                            <img src="./img/main/task/task-img02.png" alt="">
+                            <h3 class="card-name">Creating Perfect Website</h3>
+                            <h4 class="card-profession">Web Developer</h4>
+                            <div class="task-progress">
+                                <div class="progress-header">
+                                    <h3 class="progress-title">Progress</h3>
+                                    <spam class="progress-counter">85%</spam>
+                                </div>
+                                <img src="./img/main/task/progress02.svg" alt="" class="progress-img">
+                                <div class="task-time">
+                                    <div>
+                                        <img src="./img/main/task/clock.png" alt="">
+                                        <h5>4 Days Left</h5>
+                                    </div>
+                                    <img src="./img/main/task/student02.png" alt="">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <div class="taskbar-right">
-
+            <div class="_container task-bar-right-container">
+                <div class="calendare">
+                    <div class="calendare-header">
+                        <img src="./img/main/menthor/02.svg" alt="" class="slider-btn">
+                        <h2 class="date">July 2022</h2>
+                        <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
+                    </div>
+                    <ul class="calendare-list">
+                        <li class="calendare-date">
+                            <span class="day">S</span>
+                            <span class="number">10</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script>  
 </body>
 </html>
