Созданы некоторые секции taskbar-right

--- a/index.html
+++ b/index.html
@@ -223,6 +223,33 @@
                         </li>
                     </ul>
                 </div>
+                <div class="today-task">
+                    <div class="section-header today-header">
+                        <h3 class="today-title">Task Today</h3>
+                        <div class="more">
+                            <div class="more-iteam"></div>
+                        </div>
+                    </div>
+                    <img src="./img/taskbar-right/today-img.png" alt="">
+                    <div>
+                        <h3 class="card-name">Creating Awesome Mobile Apps</h3>
+                        <h4 class="card-profession">UI /UX Designer</h4>
+                    </div>
+                    <div class="task-progress">
+                        <div class="progress-header">
+                            <h3 class="progress-title">Progress</h3>
+                            <spam class="progress-counter">90%</spam>
+                        </div>
+                        <img src="./img/main/task/progress02.svg" alt="" class="progress-img">
+                        <div class="task-time">
+                            <div>
+                                <img src="./img/main/task/clock.png" alt="">
+                                <h5>1 Hour</h5>
+                            </div>
+                            <img src="./img/taskbar-right/student.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
