--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </div>
         </div>
         <main class="main">
-            <header class="header">
-                <div class="_container header_container">
+            <div class="_container">
+                <header class="header">
                     <div class="header_wrapper">
                         <div class="greeting">
                             <h1 class="user_name">Hi, Skylar Dias</h1>
@@ -63,10 +63,8 @@
                             <img src="./img/main/header/user.png" alt="">
                         </div>
                     </div>
-                </div>
-            </header>
-            <section class="statistic">
-                <div class="_container statistic-container">
+                </header>
+                <section class="statistic">
                     <div class="statistic-wrapper">
                         <div class="running-app">
                             <h2 class="running-title">Running Task</h2>
@@ -80,7 +78,7 @@
                             </div>
                         </div>
                         <div class="activity-app">
-                            <div class="activity-header">
+                            <div class="activity-header">   
                                 <h2 class="activity-title">Activity</h2>
                                 <div class="activity-select">
                                     <div class="select-header">This Week</div>
@@ -95,10 +93,8 @@
                             <img src="./img/main/statistic/activity.png" alt="statistic-activity">
                         </div>
                     </div>
-                </div>
-            </section>
-            <section class="mentor">
-                <div class="_container menthor-container">
+                </section>
+                <section class="mentor">
                     <div class="section-header menthor-header">
                         <h2 class="section-title menthor-title">Monthly Mentors</h2>
                         <div class="slider-buttons">
@@ -154,10 +150,8 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-            </section>
-            <section class="task">
-                <div class="_container task-container">
+                </section>
+                <section class="task">
                     <div class="section-header task-header">
                         <h2 class="section-title task-title">Upcoming Task</h2>
                         <div class="slider-buttons">
@@ -205,24 +199,24 @@
                             </div>
                         </li>
                     </ul>
-                </div>
-            </section>
+                </section>
+            </div>
         </main>
         <div class="taskbar-right">
-            <div class="_container task-bar-right-container">
-                <div class="calendare">
-                    <div class="calendare-header">
-                        <img src="./img/main/menthor/02.svg" alt="" class="slider-btn">
-                        <h2 class="date">July 2022</h2>
-                        <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
+            <div class="_container">
+                    <div class="calendare">
+                        <div class="calendare-header">
+                            <img src="./img/main/menthor/02.svg" alt="" class="slider-btn">
+                            <h2 class="date">July 2022</h2>
+                            <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
+                        </div>
+                        <ul class="calendare-list">
+                            <li class="calendare-date">
+                                <span class="day">S</span>
+                                <span class="number">10</span>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="calendare-list">
-                        <li class="calendare-date">
-                            <span class="day">S</span>
-                            <span class="number">10</span>
-                        </li>
-                    </ul>
-                </div>
                 <div class="today-task">
                     <div class="section-header today-header">
                         <h3 class="today-title">Task Today</h3>
@@ -240,7 +234,7 @@
                             <h3 class="progress-title">Progress</h3>
                             <spam class="progress-counter">90%</spam>
                         </div>
-                        <img src="./img/main/task/progress02.svg" alt="" class="progress-img">
+                            <img src="./img/main/task/progress02.svg" alt="" class="progress-img">
                         <div class="task-time">
                             <div>
                                 <img src="./img/main/task/clock.png" alt="">
