Реализация task-descr

--- a/index.html
+++ b/index.html
@@ -235,12 +235,32 @@
                             <spam class="progress-counter">90%</spam>
                         </div>
                             <img src="./img/main/task/progress02.svg" alt="" class="progress-img">
-                        <div class="task-time">
+                        <div class="task-descr-time">
                             <div>
                                 <img src="./img/main/task/clock.png" alt="">
                                 <h5>1 Hour</h5>
                             </div>
                             <img src="./img/taskbar-right/student.png" alt="">
+                        </div>
+                        <div class="task-descr">
+                            <div class="section-header">
+                                <h3 class="card-name">Detail Task</h3>  
+                                <h4 class="card-profession">UI /UX Designer</h4>
+                            </div>
+                            <ul class="task-descr-list">
+                                <li class="task-iteam">
+                                    <img src="./img/taskbar-right/01.svg" alt="" class="task-iteam-counter">
+                                    <p class="tasck-descr-text">Understanding the tools in Figma</p>
+                                </li>
+                                <li class="task-iteam">
+                                    <img src="./img/taskbar-right/02.svg" alt="" class="task-iteam-counter">
+                                    <p class="tasck-descr-text">Understand the basics of making designs</p>
+                                </li>
+                                <li class="task-iteam">
+                                    <img src="./img/taskbar-right/03.svg" alt="" class="task-iteam-counter">
+                                    <p class="tasck-descr-text">Design a mobile application with figma</p>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
