--- a/index.html
+++ b/index.html
@@ -98,12 +98,14 @@
                     </div>
                     <div class="statistic-wrapper flex-wrap">
                         <div class="running-app">
-                            <h2 class="running-title">Running Task</h2>
-                            <span class="counter">65</span>
+                            <div>
+                                <h2 class="running-title">Running Task</h2>
+                                <span class="counter">65</span>
+                            </div>
                             <div class="running-info">
                                 <img src="./img/main/statistic/running-app-countres.svg" alt="">
                                 <div>
-                                    <span class="task">100</span>
+                                    <span class="task-runing">100</span>
                                     <span class="running-info-title">Task</span>
                                 </div>
                             </div>
@@ -190,7 +192,7 @@
                             <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
                         </div>
                     </div>
-                    <ul class="task-list">
+                    <ul class="task-list flex-wrap">
                         <li class="task-card flex-wrap">
                             <img src="./img/main/task/task-img01.png" alt="">
                             <h3 class="card-name">Creating Mobile App Design</h3>
