Реализация кнопки назад в слайдере task

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <img src="./img/main/menthor/03.svg" alt="" class="slider-btn">
                         </div>
                     </div>
-                    <ul class="task-list flex-wrap">
+                    <ul class="task-list flex-wrap slider-wrapper">
                         <li class="task-card flex-wrap">
                             <img src="./img/main/task/task-img01.png" alt="">
                             <h3 class="card-name">Creating Mobile App Design</h3>
