Доделан слайдер для первой страницы

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="menthor-body">
-                        <ul class="menthor-list flex-wrap">
+                        <ul class="menthor-list flex-wrap slider-wrapper">
                             <li class="menthor-card">
                                 <div class="menthor-info">
                                     <div>
@@ -193,10 +193,12 @@
                         </div>
                     </div>
                     <ul class="task-list flex-wrap slider-wrapper">
-                        <li class="task-card flex-wrap">
+                        <li class="task-card">
                             <img src="./img/main/task/task-img01.png" alt="">
-                            <h3 class="card-name">Creating Mobile App Design</h3>
-                            <h4 class="card-profession">UI UX Design</h4>
+                            <div>
+                                <h3 class="card-name">Creating Mobile App Design</h3>
+                                <h4 class="card-profession">UI UX Design</h4>
+                            </div>
                             <div class="task-progress">
                                 <div class="progress-header">
                                     <h3 class="progress-title">Progress</h3>
@@ -214,8 +216,10 @@
                         </li>
                         <li class="task-card">
                             <img src="./img/main/task/task-img02.png" alt="">
-                            <h3 class="card-name">Creating Perfect Website</h3>
-                            <h4 class="card-profession">Web Developer</h4>
+                            <div>
+                                <h3 class="card-name">Creating Perfect Website</h3>
+                                <h4 class="card-profession">Web Developer</h4>
+                            </div>
                             <div class="task-progress">
                                 <div class="progress-header">
                                     <h3 class="progress-title">Progress</h3>
@@ -231,7 +235,7 @@
                                 </div>
                             </div>
                         </li>
-                    </ul>
+                    </ul>   
                 </section>
             </div>
         </main>
