Логика переключения страниц

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
             </div>
 <!-- TASK -->
-            <div class="task">
+            <div class="task-page _hidden">
                 <header class="header">
                     <div class="_container header-conrtainer">
                         <div class="header-wrapper">
